[package]
name = "parallel-hnsw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
lazy_static = "1.4.0"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.8.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.51"
timeit = "0.1.2"
