[package]
name = "parallel-hnsw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
chrono = "0.4.35"
clap = { version = "4.4.18", features = ["derive"] }
itertools = "0.12.0"
linfa = "0.7.0"
linfa-clustering = "0.7.0"
ndarray = "0.15.6"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.8.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.51"
timeit = "0.1.2"
